--- a/blogr/src/main/resources/application.properties
+++ b/blogr/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/blog_db
 spring.datasource.username=blogger_user
 spring.datasource.password=myBlogger
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.show-sql=true
 
