--- a/blogr/pom.xml
+++ b/blogr/pom.xml
@@ -66,6 +66,13 @@
 			<version>5.0.2.Final</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.modelmapper.extensions/modelmapper-jackson -->
+		<dependency>
+			<groupId>org.modelmapper.extensions</groupId>
+			<artifactId>modelmapper-jackson</artifactId>
+			<version>2.4.4</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.mashape.unirest</groupId>
 			<artifactId>unirest-java</artifactId>
